# advent_of_code

crates/2021/src/: d01.rs  d02.rs  d03.rs  d04.rs
crates/2022/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs
crates/advent_of_code/: Cargo.toml
crates/advent_of_code/src/: main.rs
